fix(tables): specify width of row overflow button (#81)

--- a/packages/tables/src/_overflow.css
+++ b/packages/tables/src/_overflow.css
@@ -37,6 +37,7 @@
   background-color: transparent; /* [1] */
   cursor: pointer;
   padding: 0; /* [1] */
+  width: 100%;
   height: 100%;
   text-decoration: none; /* [2] */
   font-size: inherit; /* [1] */
